Add initial config for exercise1

--- a/ApiExample/Exercise1/appsettings.json
+++ b/ApiExample/Exercise1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Database.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
